update repository urls

--- a/hyperconnectorexample/trunk/pom.xml
+++ b/hyperconnectorexample/trunk/pom.xml
@@ -13,7 +13,7 @@
 		<repository>
 			<id>inepex</id>
 			<name>inepex</name>
-			<url>http://maven.inepex.com:8081/nexus/content/repositories/releases/</url>
+			<url>http://maven.inepex.com/content/repositories/public/</url>
 		</repository>
 	</repositories>
 
