--- a/hyperconnector/trunk/pom.xml
+++ b/hyperconnector/trunk/pom.xml
@@ -19,7 +19,7 @@
 		<repository>
 			<id>inepex</id>
 			<name>inepex</name>
-			<url>http://maven.inepex.com:8081/nexus/content/repositories/releases/</url>
+			<url>http://maven.inepex.com/content/repositories/public/</url>
 		</repository>
 	</repositories>
 
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>org.apache.thrift</groupId>
 			<artifactId>libthrift</artifactId>
-			<version>0.6.0</version>
+			<version>0.6.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -66,7 +66,7 @@
 		<repository>
 			<id>inepex</id>
 			<name>Inepex Repository</name>
-			<url>http://maven.inepex.com:8081/nexus/content/repositories/releases</url>
+			<url>http://maven.inepex.com/content/repositories/thirdparty</url>
 		</repository>
 	</distributionManagement>
 </project>
