--- a/hyperconnector/trunk/pom.xml
+++ b/hyperconnector/trunk/pom.xml
@@ -55,6 +55,16 @@
 			<artifactId>libthrift</artifactId>
 			<version>0.6.1</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
