--- a/hyperconnector/trunk/pom.xml
+++ b/hyperconnector/trunk/pom.xml
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>org.apache.thrift</groupId>
 			<artifactId>libthrift</artifactId>
-			<version>0.6.1</version>
+			<version>0.8.0</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
@@ -65,6 +65,11 @@
 					<artifactId>slf4j-api</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.hypertable.thrift</groupId>
+			<artifactId>hypertable</artifactId>
+			<version>0.9.5.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
