--- a/hyperconnectorexample/trunk/pom.xml
+++ b/hyperconnectorexample/trunk/pom.xml
@@ -8,6 +8,10 @@
 
 	<name>example</name>
 	<url>http://maven.apache.org</url>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 	<repositories>
 		<repository>
@@ -23,13 +27,32 @@
 				<directory>src/main/java</directory>
 			</resource>
 		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<excludes>
+						<exclude>**/DumpRestoreIntegrityTest.java</exclude>
+						<exclude>**/HyperDumperPerformanceTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 	<dependencies>
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.9.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.inepex</groupId>
 			<artifactId>hyperconnector</artifactId>
-			<version>0.9.0.6</version>
+			<version>0.9.5.7</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -39,4 +62,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 </project>
