--- a/hyperconnector/trunk/pom.xml
+++ b/hyperconnector/trunk/pom.xml
@@ -31,6 +31,18 @@
 		</resources>
 		<plugins>
 			<plugin>
+	          <artifactId>maven-compiler-plugin</artifactId>
+	          <version>3.0</version>
+	          <configuration>
+	            <source>1.5</source>
+	            <target>1.5</target>
+	            <encoding>UTF-8</encoding>
+	            <fork>true</fork>
+	            <meminitial>128m</meminitial>
+	            <maxmem>512m</maxmem>
+	          </configuration>
+	        </plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.8</version>
