--- a/hyperconnectorexample/trunk/pom.xml
+++ b/hyperconnectorexample/trunk/pom.xml
@@ -30,6 +30,16 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.8</version>
 				<configuration>
@@ -52,7 +62,7 @@
 		<dependency>
 			<groupId>com.inepex</groupId>
 			<artifactId>hyperconnector</artifactId>
-			<version>0.9.5.9</version>
+			<version>0.9.5.91</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
