--- a/hyperconnector/trunk/pom.xml
+++ b/hyperconnector/trunk/pom.xml
@@ -30,6 +30,14 @@
 			</resource>
 		</resources>
 		<plugins>
+		    <plugin>
+		      <artifactId>maven-assembly-plugin</artifactId>
+		      <configuration>
+		        <descriptorRefs>
+		          <descriptorRef>jar-with-dependencies</descriptorRef>
+		        </descriptorRefs>
+		      </configuration>
+		    </plugin>
 			<plugin>
 	          <artifactId>maven-compiler-plugin</artifactId>
 	          <version>3.0</version>
